@@ -1,3 +1,6 @@
+2012-10-19 yusei
+* Redirect to view form with a nice message if selected workflow action is not available. To show a workflow dialog which absolutely fail is not good.
+
 2012-10-11 arnaud.fontaine
 * Fix dead ProxyField after renaming of ProxyFields (now available in erp5_core_proxy_field_legacy).
 
